MainWindow задокументирован. Убрано лишнее.
На текущий момент функционал такой:
1. Коннект/дискннект в ручном режиме. При запуске приложения, если есть COM в котором встречается CH340, выставляет его по умолчанию со скорость. 115200. Можно без открытия настроек жать коннект.
2. Автозапрос isOnline и статуса раз в секунду.
3. Вкл/выкл автозапрос точек по готовности
4. Вкл/выкл автозапись каждого шота в файл
5. Сохранение каждого полученого шота в Лист с последующий возможностью просмотра каждого
6. Получение шота в ручном режиме
7. Очистка списка шотов и графика
8. Отображение isOnline, статуса готовности точек, размера очереди пакетов на отправку, анимации ожидания ответа.
9. Отображение полученного шота на графике со всеми вытекающими: Масштабирование отдельно по горизонтали и вертикали, выбора точки на графике  с отображением в статус баре значения Х и Y.

Если график призумить, то точки на графике выбираются без проблем. Если тыкнуть в график во весь размер, то приложение зависнет секунд на 30. Возможно надо вообще убрать эту функцию.

--- a/res.qrc
+++ b/res.qrc
@@ -134,5 +134,9 @@
         <file>Resources/test.png</file>
         <file>Resources/test2.png</file>
         <file>Resources/up.png</file>
+        <file>Resources/unnamed.gif</file>
+        <file>Resources/unnamed2.gif</file>
+        <file>Resources/unnamed3.gif</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
