--- a/res.qrc
+++ b/res.qrc
@@ -143,5 +143,9 @@
         <file>Resources/scale.svg</file>
         <file>Resources/Leftsidebar.svg</file>
         <file>Resources/Rightsidebar.svg</file>
+        <file>Resources/logo_mini.jpg</file>
+        <file>Resources/sound-1781570_960_720.png</file>
+        <file>Resources/png-transparent-sound-wave-acoustic-wave-sound-sound-wave-curve-template-blue-angle.png</file>
+        <file>Resources/voice-record.svg</file>
     </qresource>
 </RCC>
