Певая иттерация автоподборщика параметров

--- a/res.qrc
+++ b/res.qrc
@@ -155,6 +155,7 @@
         <file>style.css</file>
         <file>styleYelowButtons.css</file>
         <file>styleWhiteButtons.css</file>
+        <file>styleGreenButtons.css</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>Resources/Fonts/Nunito/Nunito-Light.ttf</file>
